# TracerTracker

./: .gitignore  ATKMS901M_resolver.py  CMakeLists.txt  README.md  config.json  requirements.txt
src/: config.json  main.cpp  main.py
src/config/: ConfigLoader.cpp  ConfigLoader.h  ConfigTypes.h
src/ins/: Ahrs.cpp  Ahrs.h  Filters.cpp  Filters.h  MathUtils.cpp  MathUtils.h  PoseProcessor.cpp  PoseProcessor.h  __init__.py  ahrs.py  filters.py  math_utils.py  pose_processor.py
src/io/: DataReceiver.cpp  DataReceiver.h  Ms901mStreamParser.cpp  Ms901mStreamParser.h
src/ui/: AttitudeWidget.cpp  AttitudeWidget.h  DebugConsole.cpp  DebugConsole.h  MainWindow.cpp  MainWindow.h  SensorChartPanel.cpp  SensorChartPanel.h  SensorInfoOverlay.cpp  SensorInfoOverlay.h  Styles.h  ToolBar.cpp  ToolBar.h  ViewOrientationGizmo.cpp  ViewOrientationGizmo.h  attitude_widget.py  debug_console.py  grid_renderer.py  main_window.py  sensor_chart_panel.py  sensor_info_overlay.py  styles.py  toolbar.py  track_renderer.py  view_gizmo.py  viewer_3d.py
src/ui/opengl/: GridRenderer.cpp  GridRenderer.h  TrackRenderer.cpp  TrackRenderer.h  Viewer3D.cpp  Viewer3D.h
src/utils/: atkms901m_resolver.py  config_loader.py  data_receiver.py  ins_math.py  pose_processor.py
tests/: test_udp_prefix.py  test_udp_sender.py
